--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Welcome to my website.</h1>
     <p>Web development is the process of creating, designing, building, and maintaining websites and web applications that are accessible through the internet. It involves a combination of various technologies, languages, and tools to bring both visual and functional aspects to life on the web.</p>
+    <p>Apps I use -</p>
+    <ol>
+        <li>WhatsApp</li>
+    </ol>
 </body>
 </html>
