--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -14,5 +14,11 @@
         <li>Twitter</li>
         <li>Chrome</li>
     </ol>
+    <p>Tv  shows I watch</p>
+    <ul>
+        <li>Henry Danger</li>
+        <li>Danger Force</li>
+        
+    </ul>
 </body>
 </html>
