--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -18,7 +18,7 @@
     <ul>
         <li>Henry Danger</li>
         <li>Danger Force</li>
-        
+        <li>Spyders</li>
     </ul>
 </body>
 </html>
